<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_jp"
        android:text="@string/welcome_title"
        android:textColor="@color/expressive_on_surface"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_sans_jp"
        android:text="@string/welcome_message"
        android:textColor="@color/expressive_on_surface_variant"
        android:textSize="13sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/welcomeStartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_start_button" />
</LinearLayout>
